--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
-	
+
 </head>
 <body>
 <div class="top-header">
-	<h3 class="name">Nina Carducci</h3>
+	<h3 class="name">Nina Carducci test</h3>
 	<div class="nav">   
 		<ul>
 			<li><a href="#about">À propos</a></li>
