--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-8ZPLV8SNMF"></script>
+    <script> window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+			gtag('config', 'G-8ZPLV8SNMF');
+    </script>
 
 </head>
 <body>
