--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Nina Carducci</title>
 	<meta name="description" content="Nina Carducci, photographe professionnelle, propose des services à la carte incluant photographie pour entreprise, mariage, concerts, portraits et retouche. Découvrez mon portfolio et mes prestations pour immortaliser un momment. ">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
