--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="robots" content="index">
 	<!--title & description-->
 	<title>Nina Carducci photographe évênementiel</title>
-	<meta name="description" content="Nina Carducci, photographe professionnelle, propose des services à la carte incluant photographie pour entreprise, mariage, concerts, portraits et retouche. Découvrez mon portfolio et mes prestations pour immortaliser un momment. ">
+	<meta name="description" content="Nina Carducci, photographe professionnelle, propose des services à la carte incluant photographe évenementiels (mariage, concerts, portraits) ou pour professionnel (entreprise ou retouche photo). Découvrez mon portfolio et mes prestations pour immortaliser un momment. ">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--facebook-->
 	<meta property="og:title" content="Nina Carducci">
