--- a/index.html
+++ b/index.html
@@ -106,34 +106,43 @@
 <div id="services">
 	<h2 class="title">Mes services</h2>
 	<div class="container">
-		<div class="service">
+		<div class="service" itemscope itemtype="https://schema.org/Service">
 			<div class="service__description">
 				<h3>Shooting photo</h3>
 				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
 			</div>
 			<div class="service__price">
-				<h3>350€/demi journée</h3>
+				<h3>
+					<span itemprop="priceCurrency" content="EUR">€</span>
+                    <span itemprop="price" content="350.00">350</span>/demi-journée
+				</h3>
 				<span>Matériel, déplacement inclus</span>
 			</div>
 
 		</div>
-		<div class="service">
+		<div class="service" itemscope itemtype="https://schema.org/Service">
 			<div class="service__description">
 				<h3>Retouches</h3>
 				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
 			</div>
 			<div class="service__price">
-				<h3>50€/photo</h3>
+				<h3>
+					<span itemprop="priceCurrency" content="EUR">€</span>
+                    <span itemprop="price" content="50.00">50</span>/photo
+				</h3>
 				<span>2 AR par photo</span>
 			</div>
 		</div>
-		<div class="service">
+		<div class="service" itemscope itemtype="https://schema.org/Service">
 			<div class="service__description">
 				<h3>Album photos</h3>
 				<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
 			</div>
 			<div class="service__price">
-				<h3>400€ album A4</h3>
+				<h3>
+					<span itemprop="priceCurrency" content="EUR">€</span>
+                    <span itemprop="price" content="400.00">400</span>/album A4
+				</h3>
 				<span>30 pages recto/verso</span>
 			</div>
 		</div>
