--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 	        <span itemprop="streetAddress">68 avenue Alsace-Lorraine</span><br>
             <span itemprop="postalCode">33200</span><br>
             <span itemprop="addressLocality">Bordeaux</span><br>
-            <span itemprop="addressCountry">France</span>
-			<span itemprop="telephone">05 56 67 78 89</span>
+            <span itemprop="addressCountry" content="FR">France</span>
+			<span itemprop="telephone" content="+33556677889">05 56 67 78 89</span>
         </address>
 		<div>
 		<meta itemprop="openingHours" content="Mo 10:00-19:00">
