rich snippet target

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.png" alt="Photo auto-portrait, femme afro-française bras croisés , demi-sourire ">
+		<img itemprop='image 'src="./assets/images/nina.png" alt="Photo auto-portrait, femme afro-française bras croisés , demi-sourire ">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -197,7 +197,8 @@
 		   Le mercredi de 10h à 19h<br>
 		   Le jeudi de 10h à 19h<br>
 		   Le vendredi de 10h à 19h</p>
-	    </div>     
+	    </div>
+		<div itemprop="priceRange" style="display:none;">€€</div>
 	</div>
 </div>
 	
