--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img itemprop='image 'src="./assets/images/nina.png" alt="Photo auto-portrait, femme afro-française bras croisés , demi-sourire ">
+		<img src="./assets/images/nina.png" alt="Photo auto-portrait, femme afro-française bras croisés , demi-sourire ">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -157,7 +157,7 @@
 	</figure>
 </div>
 <footer>
-<div id="contact">
+<div id="contact" itemscope itemtype="https://schema.org/LocalBusiness" >
 	<div class="container">
 		<div class="form-container">
 			<h2>Une question ? Une demande de devis ?</h2>
@@ -173,10 +173,10 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.png" alt="Appareil photo ancien , dans des tons chauds">
+			<img itemprop='image' src="./assets/images/camera.png" alt="Appareil photo ancien , dans des tons chauds">
 		</div>
 	</div>
-	<div itemscope itemtype="https://schema.org/LocalBusiness" class="container localBusiness">
+	<div class="container localBusiness">
 		<span itemprop="name"><strong>Nina Carducci</strong></span><br>
         <address itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
 	        <span itemprop="streetAddress">68 avenue Alsace-Lorraine</span><br>
